--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -17,18 +17,18 @@
         <div class="logo"><span>The Welcome Mat</span></div>
         <input type="checkbox" id="check">
         <label for="check">
-          <span  class="toggle-button">
+          <span class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
           </span>
         </label>
-    
+
         <div class="components">
           <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="">Rooms</a></li>
-            <li><a href="">Facalities</a></li>
+            <li><a href="./facalities.html">Facalities</a></li>>
             <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
           </ul>
         </div>
@@ -37,7 +37,6 @@
         <div class="text">
           <p class="main-1">World Class <br> Accommodation <br><span class="sub-1">Discover a hotel that defines <br>new
               dimensions of luxury</span><br> <a href=""><button class="sub-but">View More</button></a></p>
-          <!-- <button class="sub-but">View More</button> -->
         </div>
         <div class="image"><img src="https://i.pinimg.com/originals/c7/67/22/c767228a17a0dbebd6cdc03371aeb77e.jpg"
             alt="" class="img-1"></div>
@@ -66,78 +65,50 @@
       <video src="./hotel.mp4" controls autoplay muted loop class="hotel_video"></video>
     </div>
     <div class="mid-3">
-      <div class="facalities">
-        <!-- <p>Swiming pool</p> -->
-        <div class="faca-hed-1">
-          <p>Amenities</p>
+      <p style="text-align: center;color: #a55333; font-weight: 600;font-size: 2rem; margin-bottom: 0%;padding-bottom: 0%;">Amenities</p>
+      <div class="homefacalities">
+        <div class="home classhomeFaca1">
+          <img src="./images/Facalities/faca-1.jpg" alt="" class="himage facaimage1" title="Swiming Pool">
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;">Swiming Pool</p>
         </div>
-        <div class=" faca faca-1">
+        <div class="home classhomeFaca2">
+          <img src="./images/Facalities/faca-2.jpg" alt="" class="himage facaimage2">
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;">Bar</p>
+        </div>
+        <div class="home classhomeFaca3">
+          <img src="./images/Facalities/faca-3.jpg" alt="" class="himage facaimage3">
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;">Restaurant</p>
+        </div>
+        <div class="home classhomeFaca4">
+          <img src="./images/Facalities/faca-4.jpg" alt="" class="himage facaimage4">
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;">GYM</p>
+        </div>
+        <div class="home classhomeFaca5">
+          <img src="./images/Facalities/faca-5.jpg" alt="" class="himage facaimage5">
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;">Pick-Up</p>
+        </div>
+        <div class="home classhomeFaca5">
+          <img src="./images/Facalities/faca-6.jpg" alt="" class="himage facaimage6">
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;">SPA</p>
+        </div>
+        <!-- <div class=" faca faca-1">
           <div class="faca-1-img"><img src="./images/Facalities/faca-1.jpg" alt="" class="faca-1-image"></div>
-          <div class="faca-1-cont">
-            <span class="head-1">Swimming Pool</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae deserunt
-              alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam maiores tempore
-              veniam quia!</p>
-            <span class="foot-1">Service Hrs.</span><br>
-            <span class="foot-2">6:00am-8:00pm</span>
-          </div>
         </div>
         <div class=" faca faca-2">
-
-          <div class="faca-1-cont">
-            <span class="head-1">Bar</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae deserunt
-              alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam maiores tempore
-              veniam quia!</p>
-            <span class="foot-1">Service Hrs.</span><br>
-            <span class="foot-2">24 Hrs</span>
-          </div>
           <div class="faca-1-img"><img src="./images/Facalities/faca-2.jpg" alt="" class="faca-1-image"></div>
         </div>
         <div class=" faca faca-3">
           <div class="faca-1-img"><img src="./images/Facalities/faca-3.jpg" alt="" class="faca-1-image"></div>
-          <div class="faca-1-cont">
-            <span class="head-1">Restaurant</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae deserunt
-              alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam maiores tempore
-              veniam quia!</p>
-            <span class="foot-1">Service Hrs.</span><br>
-            <span class="foot-2">24 Hrs</span>
-          </div>
         </div>
         <div class=" faca faca-4">
-          <div class="faca-1-cont">
-            <span class="head-1">GYM</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae deserunt
-              alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam maiores tempore
-              veniam quia!</p>
-            <span class="foot-1">Service Hrs.</span><br>
-            <span class="foot-2">24 Hrs</span>
-          </div>
           <div class="faca-1-img"><img src="./images/Facalities/faca-4.jpg" alt="" class="faca-1-image"></div>
         </div>
         <div class="faca faca-5">
           <div class="faca-1-img"><img src="./images/Facalities/faca-5.jpg" alt="" class="faca-1-image"></div>
-          <div class="faca-1-cont">
-            <span class="head-1">Pick UP</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae deserunt
-              alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam maiores tempore
-              veniam quia!</p>
-            <span class="foot-1">Service Hrs.</span><br>
-            <span class="foot-2">24 Hrs</span>
-          </div>
         </div>
         <div class=" faca faca-6">
-          <div class="faca-1-cont">
-            <span class="head-1">SPA</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae deserunt
-              alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam maiores tempore
-              veniam quia!</p>
-            <span class="foot-1">Service Hrs.</span><br>
-            <span class="foot-2">7:00am-7:00pm</span>
-          </div>
           <div class="faca-1-img"><img src="./images/Facalities/faca-6.jpg" alt="" class="faca-1-image"></div>
-        </div>
+        </div> -->
       </div>
     </div>
     <!-- <div class="mid4">
@@ -176,34 +147,43 @@
           <a href=""><button id="c-a">Check Availability</button></a>
         </form>
       </div> -->
+    <!-- </div> -->
+    <p style="color:#a55333;text-align: center;font-weight: 600; font-size: 2rem;" class="findUs">Find us</p>
+    <div class="iframe">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253840.48788413787!2d106.68943122671529!3d-6.2297280260012275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3e945e34b9d%3A0x5371bf0fdad786a2!2sJakarta%2C%20Indonesia!5e0!3m2!1sen!2s!4v1625055760748!5m2!1sen!2s"
+        allowfullscreen="" loading="lazy"></iframe>
     </div>
-    <div class="newsletter" style="display:flex;text-align: center;flex-direction: column; background-color:#3a1f14 ; padding: 0%;margin: 0%;border: none;">
+    <div class="newsletter"
+      style="display:flex;text-align: center;flex-direction: column; background-color:#3a1f14 ; padding: 0%;margin: 0%;border: none;">
       <p style="text-align: center;color: #ffffff;font-weight: 500; font-size: 2vw;">Keep Yourself Updated</p>
       <form action="/">
         <label for="email"></label>
-        <input type="email" name="email" id="email" placeholder="Subscribe To Our Newsletter" style="width: 60%;height: 3vw;outline: none;border: none; font-size: 1.5vw;"><br>
-        <input type="button" value="Subscribe" style="font-size: 2vw; background-color: #a55333; border: 1px solid #a55333; color: #fff; height: 4vw; width: 60.5%; border-radius: 0.3vw; margin-top: 9px;">
+        <input type="email" name="email" id="email" placeholder="Subscribe To Our Newsletter"
+          style="width: 60%;height: 3vw;outline: none;border: none; font-size: 1.5vw;"><br>
+        <input type="button" value="Subscribe"
+          style="font-size: 2vw; background-color: #a55333; border: 1px solid #a55333; color: #fff; height: 4vw; width: 60.5%; border-radius: 0.3vw; margin-top: 9px;">
       </form>
     </div>
     <div class="footer" id="foot">
       <div class="left" style="padding: 0%;margin: 0%; border: none;">
-          <p style="color: white;font-size: 2.5vw;">Contact us</p>
-          <p style="color: white; font-size: 1.5vw;"><a href="contact@welcomemat.com"target="_blank"  style="text-decoration: none;"><i class="bi bi-envelope-fill"
-                      onmouseover="this.style.color='#FBBC05'"
-                      onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                      onmouseover="this.style.color='#FBBC05'"
-                      onmouseout="this.style.color=' #fff'">contact@welcomemat.com</span></a></p>
-          <p style="color: white;font-size: 1.5vw;"><a href="tel: +62 21 123 4321" target="_blank" style="text-decoration: none;"><i class="bi bi-telephone-fill"
-                      onmouseover="this.style.color='#34A853'"
-                      onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                      onmouseover="this.style.color='#34A853'"
-                      onmouseout="this.style.color=' #fff'">+62 21 123 4321</span></a></p>
+        <p style="color: white;font-size: 2.5vw;">Contact us</p>
+        <p style="color: white; font-size: 1.5vw;"><a href="contact@welcomemat.com" target="_blank"
+            style="text-decoration: none;"><i class="bi bi-envelope-fill" onmouseover="this.style.color='#FBBC05'"
+              onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+              onmouseover="this.style.color='#FBBC05'"
+              onmouseout="this.style.color=' #fff'">contact@welcomemat.com</span></a></p>
+        <p style="color: white;font-size: 1.5vw;"><a href="tel: +62 21 123 4321" target="_blank"
+            style="text-decoration: none;"><i class="bi bi-telephone-fill" onmouseover="this.style.color='#34A853'"
+              onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+              onmouseover="this.style.color='#34A853'" onmouseout="this.style.color=' #fff'">+62 21 123 4321</span></a>
+        </p>
       </div>
       <div class="mid">
         <ul style="text-decoration: none;list-style: none;">
           <li><a href="./index.html">Home</a></li>
           <li><a href="">Rooms</a></li>
-          <li><a href="">Facalities</a></li>
+          <li><a href="./facalities.html">Facalities</a></li>
           <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
         </ul>
       </div>
@@ -216,19 +196,22 @@
         </form>
       </div> -->
       <div class="right" style="padding: 0%;margin: 0%;">
-          <ul>
-              <li style="color: white;font-size: 2.5vw;">Follow us </li><br>
-              <li><a href="https://www.instagram.com/abdullah.__.saleem" target="_blank"><i class="bi bi-instagram"
-                          style="color: white;font-size: 2.5vw;" onmouseover="this.style.color='#cd486b'"
-                          onmouseout="this.style.color=' #fff'"></i></a></li>
-              <li><a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook" style="color: white; font-size: 2.5vw;"
-                          onmouseover="this.style.color='#3b5998'" onmouseout="this.style.color=' #fff'"></i></a></li>
-          </ul>
+        <ul>
+          <li style="color: white;font-size: 2.5vw;">Follow us </li><br>
+          <li><a href="https://www.instagram.com/abdullah.__.saleem" target="_blank"><i class="bi bi-instagram"
+                style="color: white;font-size: 2.5vw;" onmouseover="this.style.color='#cd486b'"
+                onmouseout="this.style.color=' #fff'"></i></a></li>
+          <li><a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"
+                style="color: white; font-size: 2.5vw;" onmouseover="this.style.color='#3b5998'"
+                onmouseout="this.style.color=' #fff'"></i></a></li>
+        </ul>
       </div>
-  </div>
-  <div class="footerBottom" style="display:flex;text-align: center;flex-direction: column; background-color:#301408 ; padding: 0%;margin: 0%;border: none;">
-    <p style="text-align: center;color: white;font-size: 1.5vw;">Copyright &copy; 2021 THE WELCOME MAT. All Rights Reserved.</p>
-  </div>
+    </div>
+    <div class="footerBottom"
+      style="display:flex;text-align: center;flex-direction: column; background-color:#301408 ; padding: 0%;margin: 0%;border: none;">
+      <p style="text-align: center;color: white;font-size: 1.5vw;">Copyright &copy; 2021 THE WELCOME MAT. All Rights
+        Reserved.</p>
+    </div>
 </body>
 
 </html>
