--- a/assignments/Assignment7/facalities.html
+++ b/assignments/Assignment7/facalities.html
@@ -33,146 +33,158 @@
                     </ul>
                 </div>
             </div>
-        </div>
-        <div class="facalities">
-            <div class="faca-hed-1" style="padding-top: 2rem;">
-                <p>Amenities</p>
-            </div>
-            <div class=" faca faca-1" style="padding: 0%;margin-top: 0%;">
-                <div class="faca-1-img"><img src="./images/Facalities/faca-1.jpg" alt="" class="faca-1-image"></div>
-                <div class="faca-1-cont">
-                    <span class="head-1">Swimming Pool</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
-                        deserunt
-                        alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
-                        maiores tempore
-                        veniam quia!</p>
-                    <span class="foot-1">Service Hrs.</span><br>
-                    <span class="foot-2">6:00am-8:00pm</span>
+            <div class="img-text">
+                <div class="text">
+                    <p class="main-1">World Class <br> Accommodation <br><span class="sub-1">Discover a hotel that
+                            defines <br>new
+                            dimensions of luxury</span><br> <a href=""><button class="sub-but">View More</button></a>
+                    </p>
                 </div>
+                <div class="image"><img
+                        src="https://i.pinimg.com/originals/c7/67/22/c767228a17a0dbebd6cdc03371aeb77e.jpg" alt=""
+                        class="img-1"></div>
             </div>
-            <div class=" faca faca-2">
+        </div>
+    </div>
+    <div class="facalities">
+        <div class="faca-hed-1" style="padding-top: 2rem;">
+            <p>We Provide</p>
+        </div>
+        <div class=" faca faca-1" style="padding: 0%;margin-top: 0%;">
+            <div class="faca-1-img"><img src="./images/Facalities/faca-1.jpg" alt="" class="faca-1-image"></div>
+            <div class="faca-1-cont">
+                <span class="head-1">Swimming Pool</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
+                    deserunt
+                    alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
+                    maiores tempore
+                    veniam quia!</p>
+                <span class="foot-1">Service Hrs.</span><br>
+                <span class="foot-2">6:00am-8:00pm</span>
+            </div>
+        </div>
+        <div class=" faca faca-2">
 
-                <div class="faca-1-cont">
-                    <span class="head-1">Bar</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
-                        deserunt
-                        alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
-                        maiores tempore
-                        veniam quia!</p>
-                    <span class="foot-1">Service Hrs.</span><br>
-                    <span class="foot-2">24 Hrs</span>
-                </div>
-                <div class="faca-1-img"><img src="./images/Facalities/faca-2.jpg" alt="" class="faca-1-image"></div>
+            <div class="faca-1-cont">
+                <span class="head-1">Bar</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
+                    deserunt
+                    alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
+                    maiores tempore
+                    veniam quia!</p>
+                <span class="foot-1">Service Hrs.</span><br>
+                <span class="foot-2">24 Hrs</span>
             </div>
-            <div class=" faca faca-3">
-                <div class="faca-1-img"><img src="./images/Facalities/faca-3.jpg" alt="" class="faca-1-image"></div>
-                <div class="faca-1-cont">
-                    <span class="head-1">Restaurant</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
-                        deserunt
-                        alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
-                        maiores tempore
-                        veniam quia!</p>
-                    <span class="foot-1">Service Hrs.</span><br>
-                    <span class="foot-2">24 Hrs</span>
-                </div>
-            </div>
-            <div class=" faca faca-4">
-                <div class="faca-1-cont">
-                    <span class="head-1">GYM</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
-                        deserunt
-                        alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
-                        maiores tempore
-                        veniam quia!</p>
-                    <span class="foot-1">Service Hrs.</span><br>
-                    <span class="foot-2">24 Hrs</span>
-                </div>
-                <div class="faca-1-img"><img src="./images/Facalities/faca-4.jpg" alt="" class="faca-1-image"></div>
-            </div>
-            <div class="faca faca-5">
-                <div class="faca-1-img"><img src="./images/Facalities/faca-5.jpg" alt="" class="faca-1-image"></div>
-                <div class="faca-1-cont">
-                    <span class="head-1">Pick UP</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
-                        deserunt
-                        alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
-                        maiores tempore
-                        veniam quia!</p>
-                    <span class="foot-1">Service Hrs.</span><br>
-                    <span class="foot-2">24 Hrs</span>
-                </div>
-            </div>
-            <div class=" faca faca-6">
-                <div class="faca-1-cont">
-                    <span class="head-1">SPA</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
-                        deserunt
-                        alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
-                        maiores tempore
-                        veniam quia!</p>
-                    <span class="foot-1">Service Hrs.</span><br>
-                    <span class="foot-2">7:00am-7:00pm</span>
-                </div>
-                <div class="faca-1-img"><img src="./images/Facalities/faca-6.jpg" alt="" class="faca-1-image"></div>
+            <div class="faca-1-img"><img src="./images/Facalities/faca-2.jpg" alt="" class="faca-1-image"></div>
+        </div>
+        <div class=" faca faca-3">
+            <div class="faca-1-img"><img src="./images/Facalities/faca-3.jpg" alt="" class="faca-1-image"></div>
+            <div class="faca-1-cont">
+                <span class="head-1">Restaurant</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
+                    deserunt
+                    alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
+                    maiores tempore
+                    veniam quia!</p>
+                <span class="foot-1">Service Hrs.</span><br>
+                <span class="foot-2">24 Hrs</span>
             </div>
         </div>
-        <div class="newsletter"
-            style="display:flex;text-align: center;flex-direction: column; background-color:#3a1f14 ; padding: 0%;margin: 0%;border: none;">
-            <p style="text-align: center;color: #ffffff;font-weight: 500; font-size: 2vw;">Keep Yourself Updated</p>
-            <form action="/">
-                <label for="email"></label>
-                <input type="email" name="email" id="email" placeholder="Subscribe To Our Newsletter"
-                    style="width: 60%;height: 3vw;outline: none;border: none; font-size: 1.5vw;"><br>
-                <input type="button" value="Subscribe"
-                    style="font-size: 2vw; background-color: #a55333; border: 1px solid #a55333; color: #fff; height: 4vw; width: 60.5%; border-radius: 0.3vw; margin-top: 9px;">
-            </form>
+        <div class=" faca faca-4">
+            <div class="faca-1-cont">
+                <span class="head-1">GYM</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
+                    deserunt
+                    alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
+                    maiores tempore
+                    veniam quia!</p>
+                <span class="foot-1">Service Hrs.</span><br>
+                <span class="foot-2">24 Hrs</span>
+            </div>
+            <div class="faca-1-img"><img src="./images/Facalities/faca-4.jpg" alt="" class="faca-1-image"></div>
         </div>
-        <div class="footer" id="foot">
-            <div class="left" style="padding: 0%;margin: 0%; border: none;">
-                <p style="color: white;font-size: 2.5vw;">Contact us</p>
-                <p style="color: white; font-size: 1.5vw;"><a href="contact@welcomemat.com" target="_blank"
-                        style="text-decoration: none;"><i class="bi bi-envelope-fill"
-                            onmouseover="this.style.color='#FBBC05'"
-                            onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                            onmouseover="this.style.color='#FBBC05'"
-                            onmouseout="this.style.color=' #fff'">contact@welcomemat.com</span></a></p>
-                <p style="color: white;font-size: 1.5vw;"><a href="tel: +62 21 123 4321" target="_blank"
-                        style="text-decoration: none;"><i class="bi bi-telephone-fill"
-                            onmouseover="this.style.color='#34A853'"
-                            onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                            onmouseover="this.style.color='#34A853'" onmouseout="this.style.color=' #fff'">+62 21 123
-                            4321</span></a>
-                </p>
-            </div>
-            <div class="mid">
-                <ul style="text-decoration: none;list-style: none;">
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="">Rooms</a></li>
-                    <li><a href="./facalities.html">Facalities</a></li>
-                    <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
-                </ul>
-            </div>
-            <div class="right" style="padding: 0%;margin: 0%;">
-                <ul>
-                    <li style="color: white;font-size: 2.5vw;">Follow us </li><br>
-                    <li><a href="https://www.instagram.com/abdullah.__.saleem" target="_blank"><i
-                                class="bi bi-instagram" style="color: white;font-size: 2.5vw;"
-                                onmouseover="this.style.color='#cd486b'" onmouseout="this.style.color=' #fff'"></i></a>
-                    </li>
-                    <li><a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"
-                                style="color: white; font-size: 2.5vw;" onmouseover="this.style.color='#3b5998'"
-                                onmouseout="this.style.color=' #fff'"></i></a></li>
-                </ul>
+        <div class="faca faca-5">
+            <div class="faca-1-img"><img src="./images/Facalities/faca-5.jpg" alt="" class="faca-1-image"></div>
+            <div class="faca-1-cont">
+                <span class="head-1">Pick UP</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
+                    deserunt
+                    alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
+                    maiores tempore
+                    veniam quia!</p>
+                <span class="foot-1">Service Hrs.</span><br>
+                <span class="foot-2">24 Hrs</span>
             </div>
         </div>
-        <div class="footerBottom"
-            style="display:flex;text-align: center;flex-direction: column; background-color:#301408 ; padding: 0%;margin: 0%;border: none;">
-            <p style="text-align: center;color: white;font-size: 1.5vw;">Copyright &copy; 2021 THE WELCOME MAT. All
-                Rights
-                Reserved.</p>
+        <div class=" faca faca-6">
+            <div class="faca-1-cont">
+                <span class="head-1">SPA</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quos accusamus sint, molestiae
+                    deserunt
+                    alias non nostrum tenetur aliquam. Vel numquam provident molestiae quasi obcaecati quam
+                    maiores tempore
+                    veniam quia!</p>
+                <span class="foot-1">Service Hrs.</span><br>
+                <span class="foot-2">7:00am-7:00pm</span>
+            </div>
+            <div class="faca-1-img"><img src="./images/Facalities/faca-6.jpg" alt="" class="faca-1-image"></div>
         </div>
+    </div>
+    <div class="newsletter"
+        style="display:flex;text-align: center;flex-direction: column; background-color:#3a1f14 ; padding: 0%;margin: 0%;border: none;">
+        <p style="text-align: center;color: #ffffff;font-weight: 500; font-size: 2vw;">Keep Yourself Updated</p>
+        <form action="/">
+            <label for="email"></label>
+            <input type="email" name="email" id="email" placeholder="Subscribe To Our Newsletter"
+                style="width: 60%;height: 3vw;outline: none;border: none; font-size: 1.5vw;"><br>
+            <input type="button" value="Subscribe"
+                style="font-size: 2vw; background-color: #a55333; border: 1px solid #a55333; color: #fff; height: 4vw; width: 60.5%; border-radius: 0.3vw; margin-top: 9px;">
+        </form>
+    </div>
+    <div class="footer" id="foot">
+        <div class="left" style="padding: 0%;margin: 0%; border: none;">
+            <p style="color: white;font-size: 2.5vw;">Contact us</p>
+            <p style="color: white; font-size: 1.5vw;"><a href="contact@welcomemat.com" target="_blank"
+                    style="text-decoration: none;"><i class="bi bi-envelope-fill"
+                        onmouseover="this.style.color='#FBBC05'"
+                        onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                        onmouseover="this.style.color='#FBBC05'"
+                        onmouseout="this.style.color=' #fff'">contact@welcomemat.com</span></a></p>
+            <p style="color: white;font-size: 1.5vw;"><a href="tel: +62 21 123 4321" target="_blank"
+                    style="text-decoration: none;"><i class="bi bi-telephone-fill"
+                        onmouseover="this.style.color='#34A853'"
+                        onmouseout="this.style.color=' #fff'"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                        onmouseover="this.style.color='#34A853'" onmouseout="this.style.color=' #fff'">+62 21 123
+                        4321</span></a>
+            </p>
+        </div>
+        <div class="mid">
+            <ul style="text-decoration: none;list-style: none;">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="">Rooms</a></li>
+                <li><a href="./facalities.html">Facalities</a></li>
+                <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
+            </ul>
+        </div>
+        <div class="right" style="padding: 0%;margin: 0%;">
+            <ul>
+                <li style="color: white;font-size: 2.5vw;">Follow us </li><br>
+                <li><a href="https://www.instagram.com/abdullah.__.saleem" target="_blank"><i class="bi bi-instagram"
+                            style="color: white;font-size: 2.5vw;" onmouseover="this.style.color='#cd486b'"
+                            onmouseout="this.style.color=' #fff'"></i></a>
+                </li>
+                <li><a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"
+                            style="color: white; font-size: 2.5vw;" onmouseover="this.style.color='#3b5998'"
+                            onmouseout="this.style.color=' #fff'"></i></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footerBottom"
+        style="display:flex;text-align: center;flex-direction: column; background-color:#301408 ; padding: 0%;margin: 0%;border: none;">
+        <p style="text-align: center;color: white;font-size: 1.5vw;">Copyright &copy; 2021 THE WELCOME MAT. All
+            Rights
+            Reserved.</p>
+    </div>
     </div>
 </body>
 
