--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -69,27 +69,27 @@
       <div class="homefacalities">
         <div class="home classhomeFaca1">
           <img src="./images/Facalities/faca-1.jpg" alt="" class="himage facaimage1" title="Swiming Pool">
-          <p style="text-align: center;font-size: 1rem;font-weight: 550;">Swiming Pool</p>
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;color: #3a1f14;">Swiming Pool</p>
         </div>
         <div class="home classhomeFaca2">
           <img src="./images/Facalities/faca-2.jpg" alt="" class="himage facaimage2">
-          <p style="text-align: center;font-size: 1rem;font-weight: 550;">Bar</p>
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;color: #3a1f14;">Bar</p>
         </div>
         <div class="home classhomeFaca3">
           <img src="./images/Facalities/faca-3.jpg" alt="" class="himage facaimage3">
-          <p style="text-align: center;font-size: 1rem;font-weight: 550;">Restaurant</p>
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;color: #3a1f14;">Restaurant</p>
         </div>
         <div class="home classhomeFaca4">
           <img src="./images/Facalities/faca-4.jpg" alt="" class="himage facaimage4">
-          <p style="text-align: center;font-size: 1rem;font-weight: 550;">GYM</p>
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;color: #3a1f14;">GYM</p>
         </div>
         <div class="home classhomeFaca5">
           <img src="./images/Facalities/faca-5.jpg" alt="" class="himage facaimage5">
-          <p style="text-align: center;font-size: 1rem;font-weight: 550;">Pick-Up</p>
+          <p style="text-align: center;font-size: 1rem;font-weight: 550;color: #3a1f14;">Pick-Up</p>
         </div>
         <div class="home classhomeFaca5">
           <img src="./images/Facalities/faca-6.jpg" alt="" class="himage facaimage6">
-          <p style="text-align: center;font-size: 1rem;font-weight: 550;">SPA</p>
+          <p style="text-align: center;font-size: 1rem;font-weight: 550; color: #3a1f14;">SPA</p>
         </div>
         <!-- <div class=" faca faca-1">
           <div class="faca-1-img"><img src="./images/Facalities/faca-1.jpg" alt="" class="faca-1-image"></div>
