--- a/assignments/Assignment7/facalities.html
+++ b/assignments/Assignment7/facalities.html
@@ -28,7 +28,7 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="">Rooms</a></li>
-                        <li><a href="./facalities.html">Facalities</a></li>
+                        <li><a class="current" href="./facalities.html">Facalities</a></li>
                         <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
                     </ul>
                 </div>
@@ -162,7 +162,7 @@
             <ul style="text-decoration: none;list-style: none;">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="">Rooms</a></li>
-                <li><a href="./facalities.html">Facalities</a></li>
+                <li><a class="current" href="./facalities.html">Facalities</a></li>
                 <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
             </ul>
         </div>
