--- a/assignments/Assignment7/index.html
+++ b/assignments/Assignment7/index.html
@@ -26,7 +26,7 @@
 
         <div class="components">
           <ul>
-            <li><a href="./index.html">Home</a></li>
+            <li><a class="current" href="./index.html" >Home</a></li>
             <li><a href="">Rooms</a></li>
             <li><a href="./facalities.html">Facalities</a></li>>
             <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
@@ -181,7 +181,7 @@
       </div>
       <div class="mid">
         <ul style="text-decoration: none;list-style: none;">
-          <li><a href="./index.html">Home</a></li>
+          <li><a class="current" href="./index.html">Home</a></li>
           <li><a href="">Rooms</a></li>
           <li><a href="./facalities.html">Facalities</a></li>
           <li> <a href=""><button class="bookbutton">Book Now</button></a></li>
